Refactor EntityBase, introduce fluent schema

--- a/web-commons/pom.xml
+++ b/web-commons/pom.xml
@@ -39,5 +39,11 @@
             <groupId>stark.dataworks</groupId>
             <artifactId>dataworks-basic</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>stark.coderaider</groupId>
+            <artifactId>fluent-schema-commons</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
